# spenv

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: spenv.py
src/spenv/: __init__.py
tests/: nyse.csv  test_spenv.py
