[tool.poetry]
name = "spenv"
version = "0.1.0"
description = "Spectral Envelope for Python"
authors = ["João Pedro Saraiva"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.13.1"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
